--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(pomodoro pomodoro.c )
+add_executable(pomodoro pomodoro.c inc/ssd1306_i2c.c)
 
 pico_set_program_name(pomodoro "pomodoro")
 pico_set_program_version(pomodoro "0.1")
@@ -46,7 +46,8 @@ pico_enable_stdio_usb(pomodoro 1)
 
 # Add the standard library to the build
 target_link_libraries(pomodoro
-        pico_stdlib)
+        pico_stdlib
+        hardware_i2c)
 
 # Add the standard include files to the build
 target_include_directories(pomodoro PRIVATE
